# presolv360-research-agent

./: .env.example  .gitignore  NOTES.md  README.md  prompts.md  pyproject.toml
inputs/: ai-jobs.json  legal-odr.json
scripts/: smoke.py
src/research_agent/: __init__.py  api.py  cli.py  extract.py  fetch.py  llm.py  models.py  pipeline.py  reason.py  synthesize.py
templates/: brief.html.j2
tests/: test_api.py  test_extract.py  test_fetch.py  test_inputs.py  test_llm.py  test_models.py  test_pipeline.py  test_prompts.py  test_reason.py  test_synthesize.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: ClaimCard.test.tsx  ClaimCard.tsx  ClaimGraph.test.tsx  ClaimGraph.tsx  ExportBar.tsx  GapsPanel.tsx  InputForm.test.tsx  InputForm.tsx  RunProgress.tsx  SourceLegend.test.tsx  SourceLegend.tsx
web/src/test/: fixture.ts
